# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: code_climate.yml  linter.yml
page_loader/: page_loader.py  url.py
page_loader/scripts/: page_loader.py
tests/: conftest.py  test_page_loader.py  test_url.py
tests/fixtures/: original_file.html  processed_file.html
tests/fixtures/input/: images.html  links.html  scripts.html  www-sub-example-com-path-to-something.html
tests/fixtures/output/: images.html  links.html  scripts.html  www-sub-example-com-path-to-something.html
