[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "PageLoader is a command-line utility that downloads pages from the Internet and saves them on your computer. Together with the page, it downloads all resources (images, styles and js), allowing you to open the page without the Internet."
authors = ["akocur <akocur@yandex.ru>"]
packages = [
    { include = "page_loader" }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
wemake-python-styleguide = "^0.15.3"
pytest-cov = "^2.12.1"
requests-mock = "^1.9.3"
asciinema = "^2.1.0"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
